--- a/resources/scss/components/_auth.scss
+++ b/resources/scss/components/_auth.scss
@@ -1,6 +1,6 @@
 .auth {
     height: calc(100% - 45px);
-    background: url('../storage/icons/medicine.png');
+    background: url('../storage/icons/manipulate.png');
     background-repeat: no-repeat;
     background-position: right bottom;
     background-size: 512px;
