--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -259,6 +259,28 @@ body {
     }
 }
 
+.cta-send {
+    background: $primary;
+    padding: 10px 0;
+
+    &-container {
+        @include container;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        p {
+            color: $text;
+            font-size: 1.3em;
+            font-weight: 600;
+        }
+
+        a {
+            @include button(white, $primary);
+        }
+    }
+}
+
 @import "./components/navbar";
 @import "./components/banner";
 @import "./components/hiw";
