--- a/resources/scss/components/_banner.scss
+++ b/resources/scss/components/_banner.scss
@@ -71,6 +71,7 @@ $paddingBanner: 150px;
 
             a {
                 @include button($primary, white);
+                animation: shadow-pulse-primary 1s infinite;
             }
 
             &:before {
