--- a/resources/scss/components/_navbar.scss
+++ b/resources/scss/components/_navbar.scss
@@ -184,6 +184,10 @@
                 position: relative;
                 display: inline-block;
 
+                @include desktop {
+                    width: 150px;
+                }
+
                 &-button {
                     p {
                         margin: 0;
