--- a/resources/scss/dashboard/_navbar.scss
+++ b/resources/scss/dashboard/_navbar.scss
@@ -91,6 +91,7 @@
             display: flex;
             gap: 2*$gap;
             align-items: center;
+            min-width: fit-content;
 
             &-dropdown {
                 height: 100%;
