--- a/resources/scss/dashboard/_navbar.scss
+++ b/resources/scss/dashboard/_navbar.scss
@@ -111,8 +111,11 @@
                         cursor: pointer;
 
                         img {
-                            max-height: 65%;
+                            height: 48px;
                             border-radius: 100px;
+                            width: 48px;
+                            object-fit: cover;
+                            object-position: center;
                         }
 
                         p {
