--- a/resources/scss/components/_navbar.scss
+++ b/resources/scss/components/_navbar.scss
@@ -194,8 +194,11 @@
                     }
 
                     img {
-                        max-height: 65%;
+                        height: 48px;
                         border-radius: 100px;
+                        width: 48px;
+                        object-fit: cover;
+                        object-position: center;
                     }
                 }
 
