--- a/resources/scss/dashboard/_listing.scss
+++ b/resources/scss/dashboard/_listing.scss
@@ -22,120 +22,10 @@
             }
         }
 
-        button {
+        a {
             @include button($primary, white);
             gap: 5px;
-        }
-    }
-
-    &-table {
-        width: 100%;
-        font-size: 0.9em;
-
-        @include mobile-only {
-            font-size: 0.8em;
-        }
-
-        thead {
-            tr {
-                th {
-                    background: $text;
-                    padding: $gap;
-                    color: $bg;
-                    text-align: left;
-
-                    &:first-child {
-                        border-top-left-radius: 5px;
-                        border-bottom-left-radius: 5px;
-                    }
-
-                    &:last-child {
-                        border-top-right-radius: 5px;
-                        border-bottom-right-radius: 5px;
-                    }
-                }
-            }
-        }
-
-        tbody {
-            tr {
-
-                td,
-                th {
-                    text-align: left;
-                    padding: 4px;
-
-                    @include desktop {
-                        padding: 10px $gap;
-                    }
-                }
-
-                td {
-                    text-overflow: ellipsis;
-                    max-width: 100%;
-                    overflow: hidden;
-
-                    &:not(:first-child) {
-                        border-left: 1px solid lightgray;
-                    }
-
-                    &:nth-child(2) {
-                        max-width: 120px;
-                    }
-
-                    &:last-child {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        gap: 2* $gap;
-
-                        a {
-                            color: $text;
-                        }
-                    }
-
-                    i {
-                        &.fa-times {
-                            color: $secondary;
-                        }
-
-                        &.fa-check {
-                            color: green;
-                        }
-                    }
-
-                    span {
-                        padding: 3px 5px;
-                        border-radius: 3px;
-
-                        &.recusado {
-                            background: $secondary;
-                            color: $bg;
-                        }
-
-                        &.aguardando {
-                            background: orange;
-                            color: $bg;
-                        }
-
-                        &.enviado {
-                            background: $blue;
-                            color: $bg;
-                        }
-
-                        &.finalizado {
-                            background: green;
-                            color: $bg;
-                        }
-                    }
-                }
-
-                &:not(:last-child) {
-                    td {
-                        border-bottom: 1px solid lightgray;
-                    }
-                }
-            }
+            text-decoration: none;
         }
     }
 }
@@ -147,8 +37,8 @@
 
     .page {
         &-item {
-            width: 32px;
-            height: 32px;
+            min-width: 30px;
+            min-height: 30px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -198,3 +88,5 @@
         }
     }
 }
+
+@import "./datatable";
