--- a/resources/scss/dashboard/_profile.scss
+++ b/resources/scss/dashboard/_profile.scss
@@ -88,7 +88,11 @@ $navWidth: 200px;
                     gap: $gap;
 
                     img {
-                        max-height: 120px;
+                        height: 150px;
+                        border-radius: 100px;
+                        width: 150px;
+                        object-fit: cover;
+                        object-position: center;
                     }
 
                     label {
