--- a/resources/scss/dashboard/_budget.scss
+++ b/resources/scss/dashboard/_budget.scss
@@ -58,8 +58,10 @@
             .btn-group {
                 gap: 5px;
 
+                >a,
                 >div {
                     gap: 5px;
+                    text-decoration: none
                 }
 
                 .add {
@@ -101,20 +103,72 @@
                 }
             }
         }
+
+        .accordion {
+            color: white;
+            background-color: rgb(39, 81, 216);
+            cursor: pointer;
+            height: 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 $gap;
+            width: 100%;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 15px;
+            transition: 0.4s;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            margin-top: $gap;
+
+            &.active,
+            &:hover {
+                background-color: darken($color: rgb(39, 81, 216), $amount: 10%);
+                color: white;
+            }
+        }
+
+        .panel {
+            display: none;
+        }
+
+        &-description {
+            p {
+                margin: 0;
+                color: #666;
+            }
+        }
+    }
+
+    &-answer {
+        &-list {
+            .form {}
+        }
     }
 
     &-summary {
-        margin-top: $gap;
         background: $bg;
         height: 50px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-radius: 5px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
         padding: 0 $gap;
 
         p {
             margin: 0;
+        }
+    }
+
+    &-send {
+        margin-top: $gap;
+
+        .sendBudget {
+            @include button($blue, white);
+            gap: 5px;
         }
     }
 }
