--- a/resources/scss/dashboard.scss
+++ b/resources/scss/dashboard.scss
@@ -62,6 +62,7 @@ body {
 @import "./dashboard/listing";
 @import "./dashboard/budget";
 @import "./dashboard/form";
+@import "./dashboard/details";
 
 .hidden {
     display: none !important;
